Primera Pagina y Favicon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,12 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+    <link rel='icon' href='../public/favicon.ico' type='image/x-icon'/>
+
+
+  </head>  
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Welcome to <%= title %></h1>
+    <p>El portal donde podrá crear sus propios juegos!</p>
   </body>
 </html>
