--- a/views/quizzes/result.ejs
+++ b/views/quizzes/result.ejs
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Quiz</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='icon' href='../public/favicon.ico' type='image/x-icon'/>
 
 
   </head>  
   <body>
-    <h1>Welcome to <%= title %></h1>
-    <p>El portal donde podrá crear sus propios juegos!</p>
-    <p> <a href ="question"> Comience a Jugar</a></p>
+    <h2>Quiz: El Juego de las Preguntas</h2>
+    
+    	<p>La respuesta es: <%=result%></p>
+      <p> <a href ="/question"> Intentalo otra vez</a></p>
+
   </body>
 </html>
