--- a/views/quizzes/question.ejs
+++ b/views/quizzes/question.ejs
@@ -11,7 +11,7 @@
     <h2>Quiz: El Juego de las Preguntas</h2>
     <form method="get" action="/check">
     	<p>Pregunta: <%=question%></p>
-    	<input type="text" name="answer" value="" placeholder="Responda aquí">
+    	<input type="text" name="answer" value="<%=answer%>" placeholder="Responda aquí">
     	<input type="submit" value="Comprobar">
     </form>
   </body>
