--- a/views/quizzes/result.ejs
+++ b/views/quizzes/result.ejs
@@ -10,8 +10,8 @@
   <body>
     <h2>Quiz: El Juego de las Preguntas</h2>
     
-    	<p>La respuesta es: <%=result%></p>
-      <p> <a href ="/question"> Intentalo otra vez</a></p>
+    	<p>La respuesta <strong><%= answer %></strong> es <%= result %></p>
+      <p> <a href ="/question?answer=<%=answer%>"> Intentalo otra vez</a></p>
 
   </body>
 </html>
