--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='icon' href='../public/favicon.ico' type='image/x-icon'/>
-
-
-  </head>  
   <body>
-    <h1>Welcome to <%= title %></h1>
+    <h1>Welcome to MyQuiz</h1>
     <p>El portal donde podrá crear sus propios juegos!</p>
-    <p> <a href ="question"> Comience a Jugar</a></p>
   </body>
 </html>
