--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,35 +3,36 @@
   <head>
     <title>Preguntas</title>
     <meta charset="utf-8">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='shortcut icon' href='../public/favicon.ico' type='image/x-icon'/>
+
+     <link rel='stylesheet' href='/stylesheets/style.css' />
+      <link rel='stylesheet' type="text/css" media="only screen and (min-width: 800px) and (min-device-width: 600px)" href='/stylesheets/wide.css' />
+      <link rel='stylesheet' type="text/css" media="only screen and (max-width: 480px)" href='/stylesheets/smartphone.css' />
   </head>  
 
 
   <body>
 
-    <header>
-        <h2>Quiz: el juego de las preguntas</h2>
-    </header> 
+   <div id="page">
+        <header class ="main">
+            <h1>Quiz<span class="no-narrow">: el juego de las preguntas</h1>
+        </header> 
 
-    <nav>
-      <a href="/">Inicio</a>
-      <a href="/question">Preguntas</a>
-    </nav>
-
-
-    <section>
-        <div><%-body%><div>
-    </section>
-
-    <footer>
-      <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
-    </footer>
+        <nav class="main" role="navigation">
+          <a href="/">Inicio</a>
+          <a href="/question">Preguntas</a>
+        </nav>
 
 
-    <!-- <p>El portal donde podrá crear sus propios juegos!</p><p> <a href ="question"> Comience a Jugar</a></p> -->
+        <section class="main">
+            <div><%-body%><div>
+        </section>
 
+        <footer class="main">
+          <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
+        </footer>
 
+   </div> 
 
   </body>
 </html>
