Enlace a Github en Pie de pagina

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 
         <footer class="main">
           <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
+          <a href="http://github.com/mikiman95/MyQuiz">MyQuiz en GitHub</a>
         </footer>
 
    </div> 
