Anadido Pagina Author en rama creditos

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Preguntas</title>
-    <meta charset="utf-8">
-    <link rel='shortcut icon' href='../public/favicon.ico' type='image/x-icon'/>
+    <meta charset="UTF-8">
+    <link rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon'/>
 
      <link rel='stylesheet' href='/stylesheets/style.css' />
       <link rel='stylesheet' type="text/css" media="only screen and (min-width: 800px) and (min-device-width: 600px)" href='/stylesheets/wide.css' />
@@ -21,6 +21,7 @@
         <nav class="main" role="navigation">
           <a href="/">Inicio</a>
           <a href="/question">Preguntas</a>
+          <a href="/author">Author</a>
         </nav>
 
 
