--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,18 +15,18 @@
 
    <div id="page">
         <header class ="main">
-            <h1>Quiz<span class="no-narrow">: el juego de las preguntas</h1>
+            <h1>Quiz<span class="no-narrow">: el juego de las preguntas</span></h1>
         </header> 
 
         <nav class="main" role="navigation">
           <a href="/">Inicio</a>
-          <a href="/question">Preguntas</a>
+          <a href="/quizzes">Preguntas</a>
           <a href="/author">Author</a>
         </nav>
 
 
         <section class="main">
-            <div><%-body%><div>
+            <div><%-body%></div>
         </section>
 
         <footer class="main">
