--- a/views/quizzes/result.ejs
+++ b/views/quizzes/result.ejs
@@ -2,7 +2,7 @@
 <html>
   <body>
     <p>La respuesta <strong><%= answer %></strong> es <%= result %></p>
-    <p> <a href ="/question?answer=<%=answer%>"> Intentalo otra vez</a></p>
+    <p> <a href ="/quizzes/<%=quiz.id%>?answer=<%=answer%>"> Intentalo otra vez</a></p>
 
   </body>
 </html>
