--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,10 @@ body {
 
 .page{margin: 2% auto;
 		color:white;}
+
+
+
+
 .main{border:1px solid #999;
 	padding: 1%;
 	margin-bottom: 1px;
@@ -27,3 +31,58 @@ section{text-align: left;}
 footer{text-align: center;}
 
 nav a {margin:0px 10px 0px 0px;}
+
+
+#flashinfo{
+	margin: 2% auto;
+	color:white;
+}
+#flashinfo h3 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+   background:rgb(51, 153, 255);
+   color: #000;
+}
+#flashsuccess {
+    width: 450px;
+    border: 2px solid #238623;
+    padding: 7px;
+    padding-bottom: 0;
+    margin-bottom: 20px;
+    background-color: #f0f0f0; 
+    color: #000;
+}
+#flashsuccess h3 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background:rgb(0, 204, 0);
+}
+
+
+#flasherror{
+    width: 450px;
+    border: 2px solid red;
+    padding: 7px;
+    padding-bottom: 0;
+    margin-bottom: 20px;
+    background-color: #f0f0f0; 
+    color: #000;
+}
+#flasherror h3 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background:rgb(230, 0, 115);
+}
+
