--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,56 +33,52 @@ footer{text-align: center;}
 nav a {margin:0px 10px 0px 0px;}
 
 
-#flashinfo{
-	margin: 2% auto;
-	color:white;
-}
-#flashinfo h3 {
+
+
+/*h3 in Flash*/
+#flashinfo h3, #flashsuccess h3, #flasherror h3 {
     text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
     font-size: 12px;
     margin: -7px;
     margin-bottom: 0px;
-   background:rgb(51, 153, 255);
-   color: #000;
-}
-#flashsuccess {
-    width: 450px;
-    border: 2px solid #238623;
-    padding: 7px;
-    padding-bottom: 0;
-    margin-bottom: 20px;
-    background-color: #f0f0f0; 
     color: #000;
+}
+#flashinfo h3{
+	background:rgb(51, 153, 255);
 }
 #flashsuccess h3 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
     background:rgb(0, 204, 0);
 }
-
-
-#flasherror{
-    width: 450px;
-    border: 2px solid red;
-    padding: 7px;
-    padding-bottom: 0;
-    margin-bottom: 20px;
-    background-color: #f0f0f0; 
-    color: #000;
-}
 #flasherror h3 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
     background:rgb(230, 0, 115);
 }
 
+
+
+#flashinfo,#flashsuccess,#flasherror{
+	margin: 2% auto;
+	color:white;
+    padding: 7px;
+    padding-bottom: 0;
+    margin-bottom: 20px;
+    color: #000;
+    border: 2px solid #999;
+}
+
+#flashsuccess {
+    background-color: #f0f0f0; 
+    border: 2px solid #238623;
+}
+#flasherror{
+    background-color: #f0f0f0; 
+    border: 2px solid rgb(179, 0, 89);
+}
+
+
+#flashsuccess ul li,#flasherror ul li,#flashinfo ul li {
+    margin: 5px 5px 5px 15px;
+    list-style: disc;
+    font-size: 12px;
+}
