--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -23,6 +23,15 @@
 					<td>
 						<a href="/quizzes/<%=quizzes[i].id %>"><%= quizzes[i].question %></a>
 					</td>
+					<td>
+						<a href="/quizzes/<%=quizzes[i].id %>/edit"><button>Editar</button></a>
+					</td>
+					<td>
+						<a href="/quizzes/<%=quizzes[i].id %>/?_method=DELETE"
+							onClick="return confirm('Estás seguro que quiers borrar:<%=quizzes[i].question%>');">
+							<button>Borrar</button>
+						</a>
+					</td>
 				</tr>
 			<% } %>
 		</table>
