--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,7 +1,19 @@
-
+<p>
     <form method="get" action="/quizzes/<%=quiz.id%>/check">
     	<p>Pregunta: <%=quiz.question%></p>
     	<input type="text" name="answer" value="<%=answer%>" placeholder="Responda aquí">
     	<input type="submit" value="Comprobar">
     </form>
+</p>
+<p>
+	<a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo Comentrio</button></a>
+</p>
 
+<p><strong>Comentarios:</strong></p>
+<p>
+	<ul>
+		<% for(var i in quiz.Comments){ %>			<!--This quiz.Comments is thanks to the {include:[models.Comment]} in quizcontroller.js autoload. -->
+		<li> <%= quiz.Comments[i].text %>  </li>
+		<% } %>
+	</ul>
+</p>
