Tema 20: Gestion de Usuarios, usando views/usesrsBeforeTema21 files.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,8 @@
           <a href="/">Inicio</a>
           <a href="/quizzes">Preguntas</a>
           <a href="/author">Author</a>
+          <a href="/users">Usuarios</a>
+          
         </nav>
 
 
