--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -1,5 +1,4 @@
 
-
 		
         <div class="main">
         	<!--Formulario del Buscador de Preguntas:-->
@@ -38,3 +37,17 @@
 
 		<a href="/quizzes/new"><button typer="button">Crear Pregunta</button></a>
 
+
+<!-- 
+	
+this at the top of code: 
+	<percentageSign if(format){
+			JSON.stringify(quizzes);
+	<percentage}else{ ...... %>
+
+
+
+This at bottom of the code:
+	<percentageSign  } %>
+
+-->
