--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,18 @@
 
    <div id="page">
         <header class ="main">
+
+          <div class="right">
+          <% if (!session.user) { %>
+              <a href="/users/new">Registrarse</a> 
+              <a href="/session">Login</a>
+          <% } else { %>
+              <%= session.user.username %> 
+              <a href="/users/<%= session.user.id %>">Perfil</a>
+              <a href="/session?_method=DELETE">Logout</a>
+          <% } %>
+        </div>
+
             <h1>Quiz<span class="no-narrow">: el juego de las preguntas</span></h1>
         </header> 
 
