--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -5,15 +5,35 @@
     	<input type="submit" value="Comprobar">
     </form>
 </p>
-<p>
-	<a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo Comentrio</button></a>
-</p>
+
+	
+	<% if(session.user){ %>
+		<p>
+			<a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo Comentrio</button></a>
+		</p>
+	<% } %>
+					
 
 <p><strong>Comentarios:</strong></p>
 <p>
 	<ul>
-		<% for(var i in quiz.Comments){ %>			<!--This quiz.Comments is thanks to the {include:[models.Comment]} in quizcontroller.js autoload. -->
-		<li> <%= quiz.Comments[i].text %>  </li>
+		<% for(var i in quiz.Comments){                <!--This quiz.Comments is thanks to the {include:[models.Comment]} in quizcontroller.js autoload. -->
+			var comment = quiz.Comments[i];
+			if(comment.accepted){ %>
+
+				<li> <%= comment.text %>  </li>
+
+		<%  }else if(session.user){ %>
+				
+				<li> <%= comment.text %>  </li>
+
+				<a href="/quizzes/<%= quiz.id %>/comments/<%= comment.id%>/accept?_method=PUT">
+					<button>Aceptar</button>
+				</a>
+
+			<% } %>
 		<% } %>
+
+
 	</ul>
 </p>
