tema 27 Parcialmente Completo, falta que suba la imagen

--- a/views/quizzes/_form.ejs
+++ b/views/quizzes/_form.ejs
@@ -1,20 +1,41 @@
-
-			<!--Parametros Ocultos:-->
-			<!--<input type="hidden" name="AnswerIndex" value="1"/>'  -->
-
-			<!-- Question Input box-->
+			<!--Question Input box-->
 			<label for="preg">Pregunta:</label>			<!-- Label No visible en smartphone layout -->
 			<input type = "text" id="preg" name = "quiz[question]" value="<%=quiz.question%>" placeholder="Pregunta"/> 
 
 			<br>
 
 			<!-- Answer Input box & Submit Button -->
-			<label for="resp">Respuesta:</label>			<!-- Label No visible en smartphone layout -->
+			<label for="resp">Respuesta:</label>								
 			<input type = "text" id="resp" name = "quiz[answer]" value="<%=quiz.answer%>" placeholder="Respuesta"/> 
+			
+			<br>
+
+			<!-- Image Input box & Submit Button -->
+			<label for="img">Image:</label>										
+			<input type = "file" id="img"  accept="image/*" name= "image"/>  	
 			
 			<br>
 
 			<!--Submit button--> 
 			<input type ="submit" value="Guardar">
+
 			<!--Cancel button--> 
-			<a href="/quizzes"><button type="button">Cancelar</button></a>  <!-- Hipervínculo en formato de boton. -->
+			<a href="/quizzes"><button type="button">Cancelar</button></a>  	<!-- Hipervínculo en formato de boton. -->
+
+
+
+			<!--Parametros Ocultos:-->
+			<!--<input type="hidden" name="AnswerIndex" value="1"/>'  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
