--- a/views/quizzes/new.ejs
+++ b/views/quizzes/new.ejs
@@ -5,7 +5,7 @@
     	<!--Formulario de Create New Question:-->
 		
 		<p>
-			<form method="post" action ="/quizzes">
+			<form method="post" action ="/quizzes" enctype="multipoart/form-data>
 				<% include _form.ejs%>
 			</form>
 		</p>
