--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,6 +1,15 @@
 <p>
     <form method="get" action="/quizzes/<%=quiz.id%>/check">
     	<p>Pregunta: <%=quiz.question%></p>
+
+
+		<% if(quiz.Attachment){ %>
+			<img src="<%= quiz.Attachment.url%>" />
+		<% } else { %>
+			<img src="/images/question.png" width="50px" />
+		<% } %>
+
+
     	<input type="text" name="answer" value="<%=answer%>" placeholder="Responda aquí">
     	<input type="submit" value="Comprobar">
     </form>
