--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -15,47 +15,60 @@
         </div>
   
 
+		<% if(quizzes.format){ %>
+			<%
 
-		<table>
-			<%  for(var i in quizzes){  %>
-				<tr>
+				return JSON.stringify(quizzes);
 
+			%>
 
-					<td>
-						<% if(quizzes[i].Attachment){ %>
-							<img src="<%= quizzes[i].Attachment.url%>" width="50px" />
-						<% } else { %>
-							<img src="/images/question.png" width="50px" />
+		<%} else { %>
+							
+			<table>
+				<%  for(var i in quizzes){  %>
+					<tr>
+						<td>
+							<% if(quizzes[i].Attachment){ %>
+								<img src="<%= quizzes[i].Attachment.url%>" width="50px" />
+							<% } else { %>
+								<img src="/images/question.png" width="50px" />
+							<% } %>
+						</td>
+
+						<td>
+							<a href="/quizzes/<%=quizzes[i].id %>"><%= quizzes[i].question %></a>
+						</td>
+
+						<% if(session.user){ %>
+							<% if(session.user.isAdmin || session.user.id===quizzes[i].AuthorId){ %>		<!-- Añadido en tema 25: permisos: solo borras tus preguntas-->	
+
+										<td>
+											<a href="/quizzes/<%=quizzes[i].id %>/edit"><button>Editar</button></a>
+										</td>
+										<td>
+											<a href="/quizzes/<%=quizzes[i].id %>/?_method=DELETE"
+												onClick="return confirm('Estás seguro que quiers borrar:<%=quizzes[i].question%>');">
+												<button>Borrar</button>
+											</a>
+										</td>
+
+							<% } %>
 						<% } %>
-					</td>
 
-					<td>
-						<a href="/quizzes/<%=quizzes[i].id %>"><%= quizzes[i].question %></a>
-					</td>
+					</tr>
+				<% } %>
+			</table>
 
-					<% if(session.user){ %>
-						<% if(session.user.isAdmin || session.user.id===quizzes[i].AuthorId){ %>		<!-- Añadido en tema 25: permisos: solo borras tus preguntas-->	
 
-									<td>
-										<a href="/quizzes/<%=quizzes[i].id %>/edit"><button>Editar</button></a>
-									</td>
-									<td>
-										<a href="/quizzes/<%=quizzes[i].id %>/?_method=DELETE"
-											onClick="return confirm('Estás seguro que quiers borrar:<%=quizzes[i].question%>');">
-											<button>Borrar</button>
-										</a>
-									</td>
-
-						<% } %>
-					<% } %>
-
-				</tr>
+			<% if(session.user){ %>
+				<a href="/quizzes/new"><button typer="button">Crear Pregunta</button></a>
 			<% } %>
-		</table>
 
-		<% if(session.user){ %>
-			<a href="/quizzes/new"><button typer="button">Crear Pregunta</button></a>
-		<% } %>
+	<% } %>
+
+  		
+
+		
 
 <!-- 
 	
