--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,50 +1,57 @@
-<p>
-    <form method="get" action="/quizzes/<%=quiz.id%>/check">
-    	<p>Pregunta: <%=quiz.question%></p>
+<% if(quiz.format){ %>
+
+		<%return JSON.stringify(quiz);%>
+
+<%} else { %>
+			<p>
+			    <form method="get" action="/quizzes/<%=quiz.id%>/check">
+			    	<p>Pregunta: <%=quiz.question%></p>
 
 
-		<% if(quiz.Attachment){ %>
-			<img src="<%= quiz.Attachment.url%>" />
-		<% } else { %>
-			<img src="/images/question.png" width="50px" />
-		<% } %>
+					<% if(quiz.Attachment){ %>
+						<img src="<%= quiz.Attachment.url%>" />
+					<% } else { %>
+						<img src="/images/question.png" width="50px" />
+					<% } %>
 
-		<br>
+					<br>
 
-    	<input type="text" name="answer" value="<%=answer%>" placeholder="Responda aquí">
-    	<input type="submit" value="Comprobar">
-    </form>
-</p>
+			    	<input type="text" name="answer" value="<%=answer%>" placeholder="Responda aquí">
+			    	<input type="submit" value="Comprobar">
+			    </form>
+			</p>
 
-	
-	<% if(session.user){ %>
-		<p>
-			<a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo Comentrio</button></a>
-		</p>
-	<% } %>
 					
-
-<p><strong>Comentarios:</strong></p>
-<p>
-	<ul>
-		<% for(var i in quiz.Comments){                <!--This quiz.Comments is thanks to the {include:[models.Comment]} in quizcontroller.js autoload. -->
-			var comment = quiz.Comments[i];
-			if(comment.accepted){ %>
-
-				<li> <%=comment.Author.username +': \"'+ comment.text +'\"' %>  </li>
-
-		<%  }else if(session.user && 
-					(session.user.isAdmin || (quiz.AuthorId===session.user.id))){ %>
-				
-				<li> <%=comment.Author.username +': \"'+ comment.text +'\"' %>  </li>
-
-				<a href="/quizzes/<%= quiz.id %>/comments/<%= comment.id%>/accept?_method=PUT">
-					<button>Aceptar</button>
-				</a>
-
+			<% if(session.user){ %>
+				<p>
+					<a href="/quizzes/<%= quiz.id %>/comments/new"><button>Nuevo Comentrio</button></a>
+				</p>
 			<% } %>
-		<% } %>
+									
+
+			<p><strong>Comentarios:</strong></p>
+			<p>
+				<ul>
+
+					<% for(var i in quiz.Comments){                <!--This quiz.Comments is thanks to the {include:[models.Comment]} in quizcontroller.js autoload. -->
+						var comment = quiz.Comments[i];
+						if(comment.accepted){ %>
+
+							<li> <%=comment.Author.username +': \"'+ comment.text +'\"' %>  </li>
+
+					<%  }else if(session.user && 
+								(session.user.isAdmin || (quiz.AuthorId===session.user.id))){ %>
+							
+							<li> <%=comment.Author.username +': \"'+ comment.text +'\"' %>  </li>
+
+							<a href="/quizzes/<%= quiz.id %>/comments/<%= comment.id%>/accept?_method=PUT">
+								<button>Aceptar</button>
+							</a>
+
+						<% } %>
+					<% } %>
 
 
-	</ul>
-</p>
+				</ul>
+			</p>
+<% } %>
