Now uses Stylesheet3.css

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
   <body>
   		 <p>
-			Mi nombre es <strong>Micah Davis</strong>, soy un estudiante de Teleco en la ETSIT UPM. Actualmente estoy trabajando en varios juegos para android, mi primero de ellos publicado en Google Play es: <strong><em>Check Mate Urinal</em></strong>.   Pincha en la imagen para verlo en GooglePlay, es gratis!<br><br>
+			Mi nombre es <strong>Micah Davis</strong>, soy un estudiante de Teleco en la ETSIT UPM. Actualmente estoy trabajando en varios juegos para android, el primero de ellos publicado en Google Play es: <strong><em>Check Mate Urinal</em></strong>.   Pincha en la imagen para verlo en GooglePlay, es gratis!<br><br>
 
 			<img src="/images/PictureOfMe.JPG" alt="Picture of Me" width="150" height="200"  >
 
