--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -9,12 +9,14 @@
 			<form method="post" action ="/quizzes/<%=quiz.id%>/comments/">
 				<input type ="text" 
 						id = "comment"
+						class="formText"
 						name="comment[text]"
-						value ="";
+						value =""
 						placeholder="Comentario"
+						
 				/>
 
-				<button type="submit">Enviar</button>
+				<button type="submit"  class="submitStyle">Enviar</button>
 
 			</form>
 		</p>
