--- a/views/quizzes/_formOLD.ejs
+++ b/views/quizzes/_formOLD.ejs
@@ -11,9 +11,9 @@
 			<br>
 
 			<!--Submit button--> 
-			<input type ="submit" value="Guardar">
+			<input type ="submit" class="submitStyle" value="Guardar">
 			<!--Cancel button--> 
-			<a href="/quizzes"><button type="button">Cancelar</button></a>  <!-- Hipervínculo en formato de boton. -->
+			<a href="/quizzes"><button type="button" class="button">Cancelar</button></a>  <!-- Hipervínculo en formato de boton. -->
 
 
 			<!--Parametros Ocultos:-->
