--- a/views/quizzes/new.ejs
+++ b/views/quizzes/new.ejs
@@ -1,20 +1,14 @@
 	
-	
-    <div class="main">
-    	<p>Añadir una pregunta:</p>
+    	<h2>Añadir una pregunta:</h2><br/>
     	<!--Formulario de Create New Question:-->
 		
-		<p>
-			<form method="post" action ="/quizzes" enctype="multipart/form-data">
+		
+		<form method="post" action ="/quizzes" enctype="multipart/form-data">
 				<% include _form.ejs%>
-			</form>
-		</p>
-
-
-			
-
+		</form>
 		
 
-    </div>
+
+  
 
 
