--- a/views/session/new.ejs
+++ b/views/session/new.ejs
@@ -1,5 +1,5 @@
 
-<h2>Login</h2>
+<h2>Login</h2><br/>
 
 <form method='POST' action='/session'>
 
@@ -8,17 +8,16 @@
   <div>
     <label for="login">Login:</label>
     <br />
-    <input type="text" id="login" name="login" size="30" />
-  </div>
+    <input type="text" id="login" name="login"  class="formText"  class="formText" size="30" />
+    <br />
 
-  <div>
+
     <label for="password">Password:</label>
     <br />
-    <input type="password" id="password" name="password" size="30" />
-  </div>
+    <input type="password" id="password" name="password" class="formText"  class="formText" size="30" />
+    <br />
 
-  <div>
-    <input name="commit" type="submit" value="Login" />
+    <input name="commit" type="submit" class="submitStyle" value="Login" />
   </div>
 
 </form>
