--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,10 +1,6 @@
-
-<p>
-  Crear usuario:
-</p>
-
-<p>
-    <form method="post" action="/users" >      
-        <% include _form.ejs %>
-    </form>
-</p>
+ 
+	 <h2> Crear Usuario:</h2>
+	 <br/>
+	 <form method="post" action="/users" >      
+	        <% include _form.ejs %>
+	 </form>
