--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h2>Welcome to MyQuiz</h2>
-    <p>El portal donde podrá crear sus propios juegos!</p>
+    	<h2>Welcome to MyQuiz</h2>
+    	El portal donde podrá crear sus propios juegos!
   </body>
 </html>
