--- a/views/quizzes/_form.ejs
+++ b/views/quizzes/_form.ejs
@@ -1,26 +1,26 @@
 			<!--Question Input box-->
 			<label for="preg">Pregunta:</label>			<!-- Label No visible en smartphone layout -->
-			<input type = "text" id="preg" name = "quiz[question]" value="<%=quiz.question%>" placeholder="Pregunta"/> 
+			<input type = "text" id="preg" name = "quiz[question]" value="<%=quiz.question%>"  class="formText" placeholder="Pregunta"/> 
 
 			<br>
 
 			<!-- Answer Input box & Submit Button -->
 			<label for="resp">Respuesta:</label>								
-			<input type = "text" id="resp" name = "quiz[answer]" value="<%=quiz.answer%>" placeholder="Respuesta"/> 
+			<input type = "text" id="resp" name = "quiz[answer]" value="<%=quiz.answer%>"  class="formText" placeholder="Respuesta"/> 
 			
 			<br>
 
 			<!-- Image Input box & Submit Button -->
 			<label for="img">Image:</label>										
-			<input type = "file" id="img"  accept="image/*" name="image"/>  	
+			<input type = "file" id="img"  accept="image/*" name="image"  class="formText"/>  	
 			
 			<br>
 
 			<!--Submit button--> 
-			<input type ="submit" value="Guardar">
+			<input type ="submit"  class="submitStyle" value="Guardar">
 
 			<!--Cancel button--> 
-			<a href="/quizzes"><button type="button">Cancelar</button></a>  	<!-- Hipervínculo en formato de boton. -->
+			<a href="/quizzes"><button type="button" class="button">Cancelar</button></a>  	<!-- Hipervínculo en formato de boton. -->
 
 
 
