--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -7,10 +7,11 @@
 				<!--<input type="hidden" name="AnswerIndex" value="1"/>'  -->
 
 				<!-- Input box & Submit Button -->
-				<input type = "text" name="search" placeholder="Texto a Buscar"/>  <!-- search es el query que uso.-->
-				<input type = "submit" value="Buscar"/><br>
+				<input type = "text" name="search"  class="formText" placeholder="Texto a Buscar"/>  <!-- search es el query que uso.-->
+				<input type = "submit" class="submitStyle" value="Buscar"/>
 
 			</form>
+						
 
         </div>
   
@@ -23,7 +24,10 @@
 			%>
 
 		<%} else { %>
-							
+			<% if(session.user){ %>
+				<a href="/quizzes/new"><button type="button" class="button" text-align="center">Crear Pregunta</button></a>
+			<% } %>
+				
 			<table>
 				<%  for(var i in quizzes){  %>
 					<tr>
@@ -43,12 +47,12 @@
 							<% if(session.user.isAdmin || session.user.id===quizzes[i].AuthorId){ %>		<!-- Añadido en tema 25: permisos: solo borras tus preguntas-->	
 
 										<td>
-											<a href="/quizzes/<%=quizzes[i].id %>/edit"><button>Editar</button></a>
+											<a href="/quizzes/<%=quizzes[i].id %>/edit"><button class="button">Editar</button></a>
 										</td>
 										<td>
 											<a href="/quizzes/<%=quizzes[i].id %>/?_method=DELETE"
 												onClick="return confirm('Estás seguro que quiers borrar:<%=quizzes[i].question%>');">
-												<button>Borrar</button>
+												<button class="button">Borrar</button>
 											</a>
 										</td>
 
@@ -60,9 +64,7 @@
 			</table>
 
 
-			<% if(session.user){ %>
-				<a href="/quizzes/new"><button typer="button">Crear Pregunta</button></a>
-			<% } %>
+			
 
 	<% } %>
 
