--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -12,14 +12,14 @@
       <% if (session.user) { %>
         <td>
           <% if (session.user.isAdmin || session.user.id === users[i].id) { %>
-            <a href="/users/<%= users[i].id %>/edit"><button>editar</button></a>
+            <a href="/users/<%= users[i].id %>/edit"><button class="button">editar</button></a>
           <% } %>
         </td>
         <td>
           <% if (session.user.isAdmin && session.user.id !== users[i].id) { %>
             <a href="/users/<%= users[i].id %>?_method=DELETE" 
                onClick="return confirm('Borrar cuenta: <%= users[i].username %>');">
-               <button>borrar</button> 
+               <button class="button">borrar</button> 
             </a> 
           <% } %>
         </td>
@@ -30,7 +30,7 @@
 </table>
 
 <% if (session.user) { %>
-  <a href="/users/new"><button type="button">Crear usuario</button></a>
+  <a href="/users/new"><button type="button" class="button">Crear usuario</button></a>
 <% }; %>
 
 <%  if (locals.paginate_control) { %>
