--- a/views/quizzes/edit.ejs
+++ b/views/quizzes/edit.ejs
@@ -1,9 +1,5 @@
 
-        <p>
-        	Edite la pregunta
-        </p>
-  		<p>
+        <h2>Edite la pregunta</h2><br/>
   			<form method ="post" action="/quizzes/<%=quiz.id%>?_method=PUT" enctype="multipart/form-data">
   				<%include _form.ejs%>
   			</form>
-  		</p>
