Readme Actualizado y Fixed new comment view

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,11 +1,7 @@
 	
-	
-    <div class="main">
-
-    	<p>Añadir un comentario:</p>
+	<h2>Añadir un comentario:</h2><br/>
     	<!--Formulario de Create New Question:-->
 		
-		<p>
 			<form method="post" action ="/quizzes/<%=quiz.id%>/comments/">
 				<input type ="text" 
 						id = "comment"
@@ -19,8 +15,6 @@
 				<button type="submit"  class="submitStyle">Enviar</button>
 
 			</form>
-		</p>
 
-    </div>
 
 
